--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -22,7 +22,8 @@ en:
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
     sessions:
-      signed_in: 'Signed in successfully.'
+      # signed_in: 'Signed in successfully.'
+      signed_in: ''
       signed_out: 'Signed out successfully.'
     passwords:
       send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
