--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,11 +6,12 @@ en:
     action_not_allowed: "Action not allowed"
   activerecord:
     models:
-      ns: NS
-      cname: CNAME
-      mx: MX
-      soa: SOA
-      txt: TXT
+      soa: "SOA Record"
+      ns: "NS Record"
+      cname: "CNAME Record"
+      mx: "MX Record"
+      a: "A Record"
+      txt: "TXT Record"
 #    attributes:
 #      user:
 #        login: "Handle"
