--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,8 +5,8 @@ en:
   errors:
     action_not_allowed: "Action not allowed"
     messages:
-      ipv4: "must be a valid IPV4"
-      ipv6: "must be a valid IPV6"
+      ipv4: "must be a valid IPv4"
+      ipv6: "must be a valid IPv6"
   activerecord:
     models:
       soa: "SOA Record"
@@ -16,6 +16,7 @@ en:
       a: "A Record"
       aaaa: "AAAA Record"
       txt: "TXT Record"
+      srv: "SRV Record"
     attributes:
       domain:
         ip: "IP"
