--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -21,6 +21,7 @@ en:
       invalid_token: 'Invalid authentication token.'
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
+      deactivated: 'Account locked.'
     sessions:
       # signed_in: 'Signed in successfully.'
       signed_in: ''
@@ -38,6 +39,7 @@ en:
       signed_up_but_unconfirmed: 'A message with a confirmation link has been sent to your email address. Please open the link to activate your account.'
       signed_up_but_inactive: 'You have signed up successfully. However, we could not sign you in because your account is not yet activated.'
       signed_up_but_locked: 'You have signed up successfully. However, we could not sign you in because your account is locked.'
+      signed_up_but_deactivated: 'You have signed up successfully. However, we could not sign you in because your account is deactivated.'
     unlocks:
       send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
       unlocked: 'Your account was successfully unlocked. You are now signed in.'
