--- a/README
+++ b/README
@@ -8,12 +8,10 @@ Install required gems
 > bundle install
 
 # create config/database.yml and config/settings.yml from the samples
-> bundle exec rake db:drop db:create db:migrate db:seed:development
+> bundle exec rake db:setup
 
 ## Tests
 
-Start Guard
-> bundle exec guard
-
 Run tests
 > bundle exec rspec spec
+
